--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.tapit.adview" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
+	<uses-sdk android:minSdkVersion="3" />
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
@@ -27,18 +27,20 @@
 		</activity>
 		<activity android:name="com.tapit.adview.ormma.util.OrmmaActionHandler"/>
 -->
-		<activity android:name="com.tapit.adview.AdActivity"
+		<activity android:name=".OldAdActivity"
               android:configChanges="keyboard|keyboardHidden|orientation"/>
 		<service android:name=".notif.AdService">
 			<intent-filter>
 				<action android:name="com.tapit.adview.notif.AdService01010" />
 			</intent-filter>
 		</service>
+<!-- 
 		<receiver android:name="com.tapit.test.BootReceiver">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED" />
 				<category android:name="android.intent.category.HOME" />
 			</intent-filter>
 		</receiver>
+-->
 	</application>
 </manifest> 
