--- a/src/example/AndroidManifest.xml
+++ b/src/example/AndroidManifest.xml
@@ -14,12 +14,13 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 	
-    	<application
+    <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-    		<activity android:name="com.tapit.adview.AdActivity"
-              android:configChanges="keyboard|keyboardHidden|orientation"/>
-    	    <activity
+        <activity
+            android:name="com.tapit.adview.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation" />
+        <activity
             android:name=".TapItTestActivity"
             android:label="@string/app_name" >
             <intent-filter>
