--- a/src/example/AndroidManifest.xml
+++ b/src/example/AndroidManifest.xml
@@ -4,15 +4,16 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="4" />
 
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
     
-    <!-- Enable ad geotargeting -->
+    <!-- Optional permissions to enable ad geotargeting
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+	-->
 	
     <application
         android:icon="@drawable/ic_launcher"
