--- a/src/sdk/AndroidManifest.xml
+++ b/src/sdk/AndroidManifest.xml
@@ -4,20 +4,12 @@
 	<uses-sdk android:minSdkVersion="3" />
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-	<!-- 
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+
+	<!-- Optional permissions for geo-targeting ads 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 	 -->
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
-	<uses-permission android:name="android.permission.READ_CALENDAR"></uses-permission>
-	<uses-permission android:name="android.permission.WRITE_CALENDAR"></uses-permission>
-	<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
-	<uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
-	<uses-permission android:name="android.permission.CAMERA"></uses-permission>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-	<uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 <!--
@@ -28,21 +20,6 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="com.tapit.adview.ormma.util.OrmmaActionHandler"/>
--->
-		<activity android:name=".OldAdActivity"
-              android:configChanges="keyboard|keyboardHidden|orientation"/>
-		<service android:name=".notif.AdService">
-			<intent-filter>
-				<action android:name="com.tapit.adview.notif.AdService01010" />
-			</intent-filter>
-		</service>
-<!-- 
-		<receiver android:name="com.tapit.test.BootReceiver">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-				<category android:name="android.intent.category.HOME" />
-			</intent-filter>
-		</receiver>
 -->
 	</application>
 </manifest> 
