--- a/src/example/AndroidManifest.xml
+++ b/src/example/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name="com.tapit.adview.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation" />
         <activity
+            android:name="com.google.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+        <activity
             android:name=".TapItTestActivity"
             android:label="@string/app_name" >
             <intent-filter>
